# mono

./: README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  requirements.txt
.github/workflows/: azure-serverless-comments.yml
azure/serverless-comments/: README.md  function_app.py  requirements.txt
azure/serverless-comments/pipelines/: main.tf  variables.tf
python/LLM_and_prompts/: prompts.py
python/archiving/: README.md  projects_archive.py
python/blog_experiments/: 0x101_isnt.ipynb
python/gptsmartfunc/: README.md  pyproject.toml
python/gptsmartfunc/examples/: README.md
python/gptsmartfunc/gptsmartfunc/: .gitignore  func_json_extractor.py  openai_service.py
python/gptsmartfunc/gptsmartfunc/examples/: 1_naive_approach.ipynb  2_SolutionApproach.ipynb
python/gzip_mnist/: mnist_gzip.ipynb
python/search_project/: .gitignore  README.md  pyproject.toml
python/search_project/search_project/: context.db  context.py  llm.py  main.py  orchestrator.py  persistence.py  personas.py  test.ipynb
python/search_project/search_project/search/: text_search.py  vector_search.py
python/search_project/search_project/utils/: populate_text_db.py
rust/wasm/: .gitignore
rust/wasm/hello_wasm/: Cargo.toml  package-lock.json  package.json
wip_bin/: README.md
wip_bin/python/: scrape_naturalisation.ipynb
wip_bin/python/cardbuilder/: main.py
wip_bin/python/nlpcompression/: compression.py  compression_eval.py  compression_mnist.py  improved_mnist.py
wip_bin/python/rageval/: readme.md
