[tool.poetry]
name = "gptsmartfunc"
version = "0.1.0"
description = ""
authors = ["Jakob Serlier <37184788+Jakob-98@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
